chore: timing the runs

--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
   "dependencies": {
     "async": "^2.6.0",
     "boom": "^7.1.1",
+    "debug": "^3.1.0",
     "detect-node": "^2.0.3",
     "hapi": "^16.6.2",
     "hat": "0.0.3",
+    "ipfs-api": "^17.3.0",
     "ipfs-repo": "^0.18.5",
     "joi": "^13.0.2",
     "lodash.clone": "^4.5.0",
@@ -80,7 +82,6 @@
     "rimraf": "^2.6.2",
     "safe-json-parse": "^4.0.0",
     "shutdown": "^0.3.0",
-    "ipfs-api": "^17.3.0",
     "stream-http": "^2.7.2",
     "subcomandante": "^1.0.5",
     "superagent": "^3.8.2",
